src/components/payment-methods/PaymentMethodsSection.scss
@import "../../styles/colors.scss";
@import "../../../public/fonts/fonts.scss";
@import "../../styles/variables.scss";

.payment-methods-section {
  gap: 32px;

  .payment-methods-table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0 16px;
    text-align: center;
    table-layout: auto;
    // margin-top: -15px;
    margin-bottom: -25px;

    thead th,
    tbody td {
      &:nth-child(2) {
        width: 11%;
      }
      &:nth-child(3) {
        width: 15%;
      }
      &:nth-child(4) {
        width: 12%;
      }
      &:nth-child(5) {
        width: 17%;
      }
      &:nth-child(6) {
        width: 13%;
      }
      &:nth-child(7) {
        width: 18%;
      }
    }

    .payment-methods-table-header {
      background: $color-background-fourth;
      background-attachment: fixed;

      tr {
        display: table-row;
        height: 60px;
        color: $text-color-primary;
        font-family: $font-primary;
        font-size: 18px;
        font-style: normal;
        line-height: normal;

        th {
          font-weight: $font-weight-regular;

          &:first-child {
            border-top-left-radius: $border-radius;
            border-bottom-left-radius: $border-radius;
          }

          &:last-child {
            border-top-right-radius: $border-radius;
            border-bottom-right-radius: $border-radius;
          }
        }
      }
    }

    tbody {
      tr {
        height: 88px;
        background: none;

        td {
          background: $color-background-third;
          padding: 10px;
          border-top: $border-width solid $border-color;
          border-bottom: $border-width solid $border-color;
          line-height: normal !important;

          &:first-child {
            display: flex;
            justify-content: center;
            align-items: center;
            border-left: $border-width solid $border-color;
            border-top-left-radius: $border-radius;
            border-bottom-left-radius: $border-radius;
            height: 88px;
            overflow: hidden;
          }

          &:last-child {
            border-right: $border-width solid $border-color;
            border-top-right-radius: $border-radius;
            border-bottom-right-radius: $border-radius;
          }

          img {
            filter: drop-shadow(
              0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.75)
            );
          }
        }

        button {
          width: 168px;
          box-shadow: 0px 4px 8px 0px rgba(0, 4, 13, 0.2);

          @media (max-width: 420px) {
            width: auto;
          }
        }
      }
    }
  }

  // Mobile-specific styles
  .mobile-payment-methods {
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 16px;

    .payment-method-card {
      .payment-method-header {
        background: $color-background-fourth;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 8px;
        padding: 8px;
        border-radius: $border-radius;

        img {
          width: 110px;
          margin-left: 16px;
          filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.4));

          @media (max-width: 420px) {
            width: auto;
            margin-left: 0;
          }
        }

        button {
          max-width: 200px;
          width: 100%;
        }

        @media (max-width: 320px) {
          flex-direction: column;
          gap: 10px;
          padding: 15px;
        }
      }

      .payment-method-details {
        background: $color-background-third;
        display: flex;
        flex-direction: column;
        padding: 8px 16px;
        border: $border-width solid $border-color;
        border-radius: $border-radius;

        p {
          color: $text-color-secondary;
          display: flex;
          justify-content: space-between;
          font-size: 18px;
          line-height: normal;
          font-weight: $font-weight-regular;
          padding: 8px;

          &:last-child {
            border-bottom: none;
          }

          strong {
            background: $text-color-fourth;
            background-clip: text;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
            font-weight: $font-weight-regular;
          }
        }
      }
    }
  }

  @media (max-width: 768px) {
    gap: 40px;

    .payment-methods-table {
      display: none;
    }
  }
}

.payment-methods-section .mobile-payment-methods .payment-method-card .payment-method-details p {
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

